--- a/.gitignore
+++ b/.gitignore
@@ -77,7 +77,6 @@ Tools/unix/zx/zx
 
 !Source/ver.lib
 !Source/Apps/FAT/FAT.COM
-!Source/Apps/copysl/copysl.com
 !Source/Apps/ZMP/zmpx.com
 !Source/Apps/ZMD/zmdsubs.rel
 !Source/Apps/Test/vdctest/font.asm
@@ -121,11 +120,14 @@ Binary/Apps/Tunes/inchina.vgm
 Binary/Apps/Tunes/shirakaw.vgm
 Binary/Apps/Tunes/startdem.vgm
 Binary/Apps/Tunes/wonder01.vgm
+Binary/Apps/copysl.doc
 Binary/Apps/fdu.doc
 Binary/Apps/zmconfig.ovr
 Binary/Apps/zminit.ovr
 Binary/Apps/zmp.doc
 Binary/Apps/zmp.hlp
+Binary/Apps/zmp.cfg
+Binary/Apps/zmp.fon
 Binary/Apps/zmterm.ovr
 Binary/Apps/zmxfer.ovr
 Binary/CPM3/bdos3.spr
@@ -144,8 +146,7 @@ Binary/CPNET/cpn12ser.lbr
 Binary/CPNET/cpn3duo.lbr
 Binary/CPNET/cpn3mt.lbr
 Binary/CPNET/cpn3ser.lbr
-Binary/RCEZ80_std.upd
-Binary/RCZ80_std.upd
+Binary/*.upd
 Binary/ZPM3/bnkbdos3.spr
 Binary/ZPM3/bnkbios3.spr
 Binary/ZPM3/gencpm.dat
@@ -174,74 +175,17 @@ Source/Fonts/fontcgau.asm
 Source/Fonts/fontvgarcc.asm
 Source/Fonts/fontvgarcc.bin
 Source/Fonts/fontvgarcu.asm
-Source/HBIOS/RCEZ80_std.upd
-Source/HBIOS/RCZ80_std.upd
+Source/HBIOS/*.upd
 Source/HBIOS/build_env.cmd
 Source/HBIOS/hbios_env.sh
+Source/HBIOS/netboot.mod
+Source/Images/*.cat
+Source/Images/*.img
 Source/Images/blank144
 Source/Images/blankhd1k
 Source/Images/blankhd512
-Source/Images/fd144_aztecc.img
-Source/Images/fd144_bascomp.img
-Source/Images/fd144_cowgol.img
-Source/Images/fd144_cpm22.img
-Source/Images/fd144_cpm3.img
-Source/Images/fd144_fortran.img
-Source/Images/fd144_games.img
-Source/Images/fd144_hitechc.img
-Source/Images/fd144_nzcom.img
-Source/Images/fd144_qpm.img
-Source/Images/fd144_tpascal.img
-Source/Images/fd144_ws4.img
-Source/Images/fd144_z80asm.img
-Source/Images/fd144_zpm3.img
-Source/Images/fd144_zsdos.img
-Source/Images/hd1k_aztecc.img
-Source/Images/hd1k_bascomp.img
-Source/Images/hd1k_blank.img
-Source/Images/hd1k_bp.img
-Source/Images/hd1k_combo.img
-Source/Images/hd1k_cowgol.img
-Source/Images/hd1k_cpm22.img
-Source/Images/hd1k_cpm3.img
-Source/Images/hd1k_fortran.img
-Source/Images/hd1k_games.img
-Source/Images/hd1k_hitechc.img
-Source/Images/hd1k_nzcom.img
-Source/Images/hd1k_qpm.img
-Source/Images/hd1k_tpascal.img
-Source/Images/hd1k_ws4.img
-Source/Images/hd1k_z80asm.img
-Source/Images/hd1k_zpm3.img
-Source/Images/hd1k_zsdos.img
-Source/Images/hd512_aztecc.img
-Source/Images/hd512_bascomp.img
-Source/Images/hd512_blank.img
-Source/Images/hd512_combo.img
-Source/Images/hd512_cowgol.img
-Source/Images/hd512_cpm22.img
-Source/Images/hd512_cpm3.img
-Source/Images/hd512_dos65.img
-Source/Images/hd512_fortran.img
-Source/Images/hd512_games.img
-Source/Images/hd512_hitechc.img
-Source/Images/hd512_nzcom.img
-Source/Images/hd512_qpm.img
-Source/Images/hd512_tpascal.img
-Source/Images/hd512_ws4.img
-Source/Images/hd512_z80asm.img
-Source/Images/hd512_zpm3.img
-Source/Images/hd512_zsdos.img
-Source/RomDsk/rom0_una.dat
-Source/RomDsk/rom0_wbw.dat
-Source/RomDsk/rom128_una.dat
-Source/RomDsk/rom128_wbw.dat
-Source/RomDsk/rom256_una.dat
-Source/RomDsk/rom256_wbw.dat
-Source/RomDsk/rom384_una.dat
-Source/RomDsk/rom384_wbw.dat
-Source/RomDsk/rom896_una.dat
-Source/RomDsk/rom896_wbw.dat
+Source/RomDsk/*.cat
+Source/RomDsk/*.dat
 Source/ZCPR-DJ/zcprdemo.com
 Source/ZPM3/autotog.com
 Source/ZPM3/clrhist.com
