--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -25,15 +25,25 @@ jobs:
       - name: Build
         run: |
           export TZ='America/Los_Angeles'
-          sudo apt-get install srecord
+          sudo apt-get install srecord gpp pandoc
+          pip install mkdocs
           make distlog
           rm -rf .git*
+          make -C Source/Doc deploy_mkdocs
+          mkdocs build -f Source/Doc/mkdocs.yml
 
       - name: List Output
         run: |
           cd Binary
           ls -l
           find -type f -exec md5sum '{}' \;
+
+      - name: Deploy Docs
+        uses: peaceiris/actions-gh-pages@v4
+        if: github.ref == 'refs/heads/master'
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: Source/Doc/site
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4.3.0
