--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,6 +52,21 @@ jobs:
           title: "${{env.TITLE}} ${{github.ref_name}}"
           files: |
             RomWBW-${{github.ref_name}}-Package.zip
+
+      - name: Build Docs
+        run: |
+          export TZ='America/Los_Angeles'
+          sudo apt-get install gpp pandoc
+          pip install mkdocs
+          make -C Source/Doc deploy_mkdocs
+          mkdocs build -f Source/Doc/mkdocs.yml
+
+      - name: Deploy Docs
+        uses: peaceiris/actions-gh-pages@v4
+        if: github.ref == 'refs/heads/master'
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: Source/Doc/site
       
 #      - name: Upload Package Archive
 #        uses: AButler/upload-release-assets@v2.0.2
