BPBIOS Sources From Jörg Linder
Jörg Linder has disassembled and thoroughly commented a great deal of the BPBIOS binaries.   This was an incredible amount of work.  I have added all of these to the RomWBW build scripts and will ultimately integrate them more completely.

--- a/Source/Makefile
+++ b/Source/Makefile
@@ -23,6 +23,7 @@ shared:
 	$(MAKE) --directory ZCPR $(ACTION)
 	$(MAKE) --directory ZCPR-DJ $(ACTION)
 	$(MAKE) --directory ZSDOS $(ACTION)
+	$(MAKE) --directory ZSDOS2 $(ACTION)
 	$(MAKE) --directory CPM3 $(ACTION)
 	$(MAKE) --directory ZPM3 $(ACTION)
 	$(MAKE) --directory CPNET $(ACTION)
