--- a/Source/Fonts/Makefile
+++ b/Source/Fonts/Makefile
@@ -1,8 +1,8 @@
 OBJECTS = \
-	font8x8u.asm font8x11u.asm font8x16u.asm fontcgau.asm fontvgarcu.asm \
-	font8x8c.asm font8x11c.asm font8x16c.asm fontcgac.asm fontvgarcc.asm
+	font6x8u.asm font8x8u.asm font8x11u.asm font8x16u.asm fontcgau.asm fontvgarcu.asm \
+	font6x8c.asm font8x8c.asm font8x11c.asm font8x16c.asm fontcgac.asm fontvgarcc.asm
 
-OTHERS = font8x8c.bin font8x11c.bin font8x16c.bin fontcgac.bin fontvgarcc.bin
+OTHERS = font6x8c.bin font8x8c.bin font8x11c.bin font8x16c.bin fontcgac.bin fontvgarcc.bin
 
 TOOLS = ../../Tools
 
@@ -13,6 +13,9 @@ include $(TOOLS)/Makefile.inc
 #
 %.rel: %.asm
 %.bin: %.asm
+
+font6x8c.bin: font6x8u.bin
+	$(BINDIR)/lzsa -f2 -r $< $@
 
 font8x8c.bin: font8x8u.bin
 	$(BINDIR)/lzsa -f2 -r $< $@
