z80: Changes to configuration for setting memory & I/O timings
Removed ability from boot up (see ez80cpudrv.adm) to allow for setting of
external memory and io timing using eZ80's W/S config.  All timings
must now be specified in terms of eZ80's Bus Cycle setting.

This is to increase compatibility with various external RCBus/RC2014
modules.

Due to eZ80 firmware changes, the configuration was always setting
the I/O Bus Cycle to the maximum setting of 7 - typically most system
will work fine at a setting of 4 B/C

current ez80 firmware version: 0.5.0.234 2025-06-21

--- a/.gitignore
+++ b/.gitignore
@@ -169,6 +169,9 @@ Source/Fonts/font8x16u.asm
 Source/Fonts/font8x8c.asm
 Source/Fonts/font8x8c.bin
 Source/Fonts/font8x8u.asm
+Source/Fonts/font6x8c.asm
+Source/Fonts/font6x8c.bin
+Source/Fonts/font6x8u.asm
 Source/Fonts/fontcgac.asm
 Source/Fonts/fontcgac.bin
 Source/Fonts/fontcgau.asm
