--- a/Source/Fonts/Makefile
+++ b/Source/Fonts/Makefile
@@ -1,8 +1,8 @@
 OBJECTS = \
-	font6x8u.asm font8x8u.asm font8x11u.asm font8x16u.asm fontcgau.asm fontvgarcu.asm \
-	font6x8c.asm font8x8c.asm font8x11c.asm font8x16c.asm fontcgac.asm fontvgarcc.asm
+	font6x8u.asm font8x8u.asm font8x11u.asm font8x16u.asm \
+	font6x8c.asm font8x8c.asm font8x11c.asm font8x16c.asm
 
-OTHERS = font6x8c.bin font8x8c.bin font8x11c.bin font8x16c.bin fontcgac.bin fontvgarcc.bin
+OTHERS = font6x8c.bin font8x8c.bin font8x11c.bin font8x16c.bin
 
 TOOLS = ../../Tools
 
@@ -24,12 +24,6 @@ font8x11c.bin: font8x11u.bin
 	$(BINDIR)/lzsa -f2 -r $< $@
 
 font8x16c.bin: font8x16u.bin
-	$(BINDIR)/lzsa -f2 -r $< $@
-
-fontcgac.bin: fontcgau.bin
-	$(BINDIR)/lzsa -f2 -r $< $@
-
-fontvgarcc.bin: fontvgarcu.bin
 	$(BINDIR)/lzsa -f2 -r $< $@
 
 %.asm: %.bin
