--- a/Source/Images/Makefile
+++ b/Source/Images/Makefile
@@ -3,51 +3,40 @@
 #
 SYSTEMS = ../CPM22/cpm_wbw.sys ../ZSDOS/zsys_wbw.sys ../QPM/qpm_wbw.sys ../CPM3/cpmldr.sys ../ZPM3/zpmldr.sys
 
-FDIMGS = fd144_cpm22.img fd144_zsdos.img fd144_nzcom.img \
-	fd144_cpm3.img fd144_zpm3.img fd144_ws4.img fd144_qpm.img \
-	fd144_z3plus.img \
-	fd144_z80asm.img fd144_aztecc.img fd144_hitechc.img \
-	fd144_bascomp.img fd144_fortran.img fd144_games.img \
-	fd144_tpascal.img fd144_cowgol.img fd144_cobol.img
-HD512IMGS = hd512_cpm22.img hd512_zsdos.img hd512_nzcom.img \
-	hd512_cpm3.img hd512_zpm3.img hd512_ws4.img
-HD512XIMGS = hd512_z80asm.img hd512_aztecc.img hd512_hitechc.img \
-	hd512_bascomp.img hd512_fortran.img hd512_games.img \
-	hd512_tpascal.img hd512_dos65.img hd512_qpm.img \
-	hd512_z3plus.img hd512_infocom.img \
-	hd512_cowgol.img hd512_msxroms1.img hd512_msxroms2.img \
-	hd512_cobol.img  hd512_blank.img
-HD1KIMGS = hd1k_cpm22.img hd1k_zsdos.img hd1k_nzcom.img \
-	hd1k_cpm3.img hd1k_zpm3.img hd1k_ws4.img
-HD1KXIMGS = hd1k_z80asm.img hd1k_aztecc.img hd1k_hitechc.img \
-	hd1k_bascomp.img hd1k_fortran.img hd1k_games.img \
-	hd1k_tpascal.img hd1k_qpm.img \
-	hd1k_z3plus.img hd1k_infocom.img \
-	hd1k_cowgol.img hd1k_msxroms1.img hd1k_msxroms2.img \
-	hd1k_cobol.img hd1k_blank.img
-HD1KXIMGS += hd1k_bp.img
+# OBJECTS =
 
 HD512PREFIX =
 HD1KPREFIX = hd1k_prefix.dat
 
-OBJECTS = $(FDIMGS)
-OBJECTS += $(HD512IMGS) $(HD512XIMGS) $(HD512PREFIX)
-OBJECTS += $(HD1KIMGS) $(HD1KXIMGS) $(HD1KPREFIX)
-
-# OBJECTS =
-
 # add base images used in *.def files
 
-BASEIMG = $(shell grep -vEh "^\#" *.def)
-BASEIMG := $(addprefix hd512_,$(BASEIMG)) $(addprefix hd1k_,$(BASEIMG))
-BASEIMG := $(addsuffix .img,$(BASEIMG))
-OBJECTS += $(BASEIMG)
+FDIMGS = $(wildcard fd_*.txt)
+FDIMGS := $(subst fd_,,$(FDIMGS))
+FDIMGS := $(addprefix fd144_,$(FDIMGS))
+FDIMGS := $(FDIMGS:.txt=.img)
 
-TEMP = $(wildcard *.def)
-TEMP := $(addprefix hd512_,$(TEMP)) $(addprefix hd1k_,$(TEMP))
-TEMP := $(TEMP:.def=.img)
-OBJECTS += $(TEMP)
+# $(info FDIMGS: $(FDIMGS))
 
+HDIMGS = $(wildcard hd_*.txt)
+HDIMGS := $(subst hd_,,$(HDIMGS))
+HDIMGS := $(addprefix hd512_,$(HDIMGS)) $(addprefix hd1k_,$(HDIMGS))
+HDIMGS := $(HDIMGS:.txt=.img)
+
+# $(info HDIMGS: $(HDIMGS))
+
+BASEIMGS = $(shell grep -vEh "^\#" *.def)
+BASEIMGS := $(addprefix hd512_,$(BASEIMGS)) $(addprefix hd1k_,$(BASEIMGS))
+BASEIMGS := $(addsuffix .img,$(BASEIMGS))
+
+# $(info BASEIMGS: $(BASEIMGS))
+
+DSKIMGS = $(wildcard *.def)
+DSKIMGS := $(addprefix hd512_,$(DSKIMGS)) $(addprefix hd1k_,$(DSKIMGS))
+DSKIMGS := $(DSKIMGS:.def=.img)
+
+# $(info DSKIMGS: $(DSKIMGS))
+
+OBJECTS = $(FDIMGS) $(HDIMGS) $(DSKIMGS) $(HD512PREFIX) $(HD1KPREFIX)
 
 OTHERS = blank144 blankhd512 blankhd1k *.cat
 
@@ -56,47 +45,27 @@ NODELETE = $(HD512PREFIX) $(HD1KPREFIX)
 DEST=../../Binary
 
 TOOLS = ../../Tools
+
+
+# $(info OBJECTS: $(OBJECTS))
+
 include $(TOOLS)/Makefile.inc
 
 .SHELLFLAGS = -ce
 
 DIFFPATH = $(DIFFTO)/Binary
 
-# hd512_%.img: %.def $(HD512IMGS) $(HD512XIMGS)
-
 hd512_%.img: %.def
-	@echo "Making hd512 $^"; \
-	file_list=""; \
-	while read line; do \
-	  line=$$(echo "$${line}" | sed 's/^[[:space:]]*//;s/[[:space:]]*$$//') ; \
-	  if [ -z "$${line}" ]; then \
-	    continue; \
-	  fi; \
-	  if [ "`echo ""$${line}"" | awk '{print substr($$0,1,1);exit}'`" = "#" ]; then \
-	    continue; \
-	  fi; \
-	  file_list="$${file_list} hd512_$${line}.img"; \
-	done < $^ ; \
-	echo "$${file_list}"; \
-	cat $${file_list} > $@
-
-# hd1k_%.img: %.def $(HD1KIMGS) $(HD1KXIMGS)
+	@echo "Generating hd512 disk image ""$@"" using $^"; \
+	files=`grep -vEh "^\s*\#" $^ | grep -vEh "^\s*$$" | tr -d '\r' | awk '{print "hd512_" $$0 ".img"}'`; \
+	echo "   " $${files}; \
+	cat $(HD512PREFIX) $${files} > $@
 
 hd1k_%.img: %.def
-	@echo "Making hd1k $^"; \
-	file_list=""; \
-	while read line; do \
-	  line=$$(echo "$${line}" | sed 's/^[[:space:]]*//;s/[[:space:]]*$$//') ; \
-	  if [ -z "$${line}" ]; then \
-	    continue; \
-	  fi; \
-	  if [ "`echo ""$${line}"" | awk '{print substr($$0,1,1);exit}'`" = "#" ]; then \
-	    continue; \
-	  fi; \
-	  file_list="$${file_list} hd1k_$${line}.img"; \
-	done < $^ ; \
-	echo "$${file_list}"; \
-	cat $(HD1KPREFIX) $${file_list} > $@
+	@echo "Generating hd1k disk image ""$@"" using $^"; \
+	files=`grep -vEh "^\s*\#" $^ | grep -vEh "^\s*$$" | tr -d '\r' | awk '{print "hd1k_" $$0 ".img"}'`; \
+	echo "   " $${files}; \
+	cat $(HD1KPREFIX) $${files} > $@
 
 #
 # this somewhat impenetrable and fragile code is used to build each of the images
@@ -127,16 +96,8 @@ blankhd1k:
 	@LC_ALL=en_US.US-ASCII tr '\000' '\345' </dev/zero | dd of=$@ bs=1024 count=$(HD1KSIZE)
 	@hexdump $@
 
-%.img: $(SYSTEMS) blank144 blankhd512 blankhd1k Makefile
-	@sys= ; \
-	case $@ in \
-		(*cpm22*) sys=../CPM22/cpm_wbw.sys;; \
-		(*qpm*) sys=../QPM/qpm_wbw.sys;; \
-		(*zsdos* | *nzcom* | *dos65* | *bp*) sys=../ZSDOS/zsys_wbw.sys;; \
-		(*cpm3* | *z3plus*) sys=../CPM3/cpmldr.sys;; \
-		(*zpm3*) sys=../ZPM3/zpmldr.sys;; \
-	esac ; \
-	if echo $@ | grep -q ^fd144_ ; then \
+%.img: $(SYSTEMS) blank144 blankhd512 blankhd1k # Makefile
+	@if echo $@ | grep -q ^fd144_ ; then \
 		fmt=wbw_fd144 ; dtype=fd ; type=fd144_ ; proto=blank144 ; \
 	fi ; \
 	if echo $@ | grep -q ^hd512_ ; then \
@@ -148,9 +109,24 @@ blankhd1k:
 	d=$$(echo $(basename $@) | sed s/$$type//) ; \
 	echo Generating $@ ; \
 	cp $$proto $@ ; \
-	if [ "$$sys" ] ; then \
-		echo copying system $$sys to $@ ; \
-		$(BINDIR)/mkfs.cpm -f $$fmt -b $$sys $@ ; \
+	if [ -f $${dtype}_$$d.txt ] ; then \
+		output=` \
+			grep "^\s*@" $${dtype}_$$d.txt | tr -d '\r' | while read directive ; do \
+				echo $${directive#?} ; \
+			done ` ; \
+		eval "$$output" ; \
+#		echo "Label: $$Label" ; \
+#		echo "SysImage: $$SysImage" ; \
+	fi ; \
+	if [ "$$SysImage" ] ; then \
+		echo copying system $$SysImage to $@ ; \
+		$(BINDIR)/mkfs.cpm -f $$fmt -b $$SysImage $@ ; \
+	fi ; \
+	if [ "$$Label" ] ; then \
+		Label=`expr substr "$$Label" 1 16` ; \
+		echo "Label: \"$$Label\""
+		echo -n "\$$\$$\$$\$$\$$\$$\$$\$$\$$\$$\$$\$$\$$\$$\$$\$$\$$" | dd conv=notrunc status=none bs=1 seek=1511 of=$@ ; \
+		echo -n "$$Label" | dd conv=notrunc status=none bs=1 seek=1511 of=$@; \
 	fi ; \
 	for u in $$(seq 0 15) ; do \
 		dir=d_$$d/u$$u ; \
@@ -163,14 +139,14 @@ blankhd1k:
 			done ; \
 		fi ; \
 	done ; \
-	echo $${dtype}_$$d.txt ; \
 	if [ -f $${dtype}_$$d.txt ] ; then \
 		echo " " copying files from $${dtype}_$$d.txt ; \
-		grep -v ^# $${dtype}_$$d.txt | tr -d '\r' | while read file user ; do \
+		grep -v "^\s*[#@]" $${dtype}_$$d.txt | tr -d '\r' | while read file user ; do \
 			rf=$$($(CASEFN) $$file | sort -f) ; \
 			echo "    " $$rf ; \
 			if [ -z "$$rf" ] ; then \
 				echo " " $$file missing ; \
+				exit 1 ; \
 			else \
 				$(CPMCP) -f $$fmt $@ $$rf $$user ; \
 			fi ; \
