Fix Images Makefile for MacOS Compatibility

--- a/Source/Images/Makefile
+++ b/Source/Images/Makefile
@@ -115,8 +115,6 @@ blankhd1k:
 				echo $${directive#?} ; \
 			done ` ; \
 		eval "$$output" ; \
-#		echo "Label: $$Label" ; \
-#		echo "SysImage: $$SysImage" ; \
 	fi ; \
 	if [ "$$SysImage" ] ; then \
 		echo copying system $$SysImage to $@ ; \
@@ -124,7 +122,7 @@ blankhd1k:
 	fi ; \
 	if [ "$$Label" ] ; then \
 		Label=`expr substr "$$Label" 1 16` ; \
-		echo "Label: \"$$Label\""
+		echo "Label: \"$$Label\"" ; \
 		echo -n "\$$\$$\$$\$$\$$\$$\$$\$$\$$\$$\$$\$$\$$\$$\$$\$$\$$" | dd conv=notrunc status=none bs=1 seek=1511 of=$@ ; \
 		echo -n "$$Label" | dd conv=notrunc status=none bs=1 seek=1511 of=$@; \
 	fi ; \
