Include BASEIMGS in dependency tracking to generate images that have no *.txt to define the content

--- a/Source/Images/Makefile
+++ b/Source/Images/Makefile
@@ -36,7 +36,7 @@ DSKIMGS := $(DSKIMGS:.def=.img)
 
 # $(info DSKIMGS: $(DSKIMGS))
 
-OBJECTS = $(FDIMGS) $(HDIMGS) $(DSKIMGS) $(HD512PREFIX) $(HD1KPREFIX)
+OBJECTS = $(FDIMGS) $(HDIMGS) $(BASEIMGS) $(DSKIMGS) $(HD512PREFIX) $(HD1KPREFIX)
 
 OTHERS = blank144 blankhd512 blankhd1k *.cat
 
