--- a/Source/Images/all.def.example
+++ b/Source/Images/all.def.example
@@ -1,6 +1,8 @@
 # This image definition shows how to generate
-# an disk image containing all of the available
-# slices.
+# a disk image containing all of the available
+# slices.  Remove the ".example" suffix from this
+# file and to cause the RomWBW build process to
+# create the "all" disk image.
 
 aztecc
 bascomp
