Comments for EaZy80-512 64K ROM, Issue #500
Comments to alert developers of the need to keep layout.inc and EZ512 build scripts in sync.

--- a/Source/EZ512/Makefile
+++ b/Source/EZ512/Makefile
@@ -28,6 +28,12 @@ DIFFPATH = $(DIFFTO)/Binary
 %_hd1k_combo.img: %_hd1k_prefix.dat  $(HD1KIMGS)
 	cat $^ > $@
 
+# The following recipe produces a 64K ROM that can be used in the EaZy80-512.
+# In order to fit in the required 64K, TastyBASIC and the Game components
+# are removed from the ROM.  If the layout of the ROM components
+# changes (see ..\Source\layout.inc), the address range that is carved
+# out below may need to be adjusted.
+
 %_64k.rom: $(DEST)/%.upd decomp.hex
 	srec_cat $< -binary -exclude 0x13700 0x14A00 -fill 0xC9 0x13700 0x14A00 -o temp.upd -binary
 	$(COMPRESS) temp.upd
