--- a/Binary/Makefile
+++ b/Binary/Makefile
@@ -5,4 +5,4 @@ SUBDIRS = Apps CPM22 CPM3 QPM ZSDOS ZPM3 CPNET
 include $(TOOLS)/Makefile.inc
 
 clean::
-	@rm -f *.bin *.com *.img *.rom *.upd *.hex *.pdf *.log *.eeprom *.dat
+	@rm -f *.bin *.com *.img *.dsk *.rom *.upd *.hex *.pdf *.log *.eeprom *.dat
