--- a/.gitignore
+++ b/.gitignore
@@ -101,6 +101,7 @@ Tools/unix/zx/zx
 !Source/Z1RCC/*.bin
 !Source/ZZRCC/*.bin
 !Source/SZ80/*.bin
+!Source/MSX/d_fat/**
 !Tools/cpm/**
 !Tools/unix/zx/*
 !Tools/zx/*
