--- a/Tools/simh/Sim.cfg
+++ b/Tools/simh/Sim.cfg
@@ -3,7 +3,7 @@ set cpu z80
 set cpu noaltairrom
 set n8vem enabled
 ;set n8vem enabled debug=verbose
-set debug debug.log
+;set debug debug.log
 
 ; Console
 ; set console telnet=23
